==> openmv/openmv/src/omv/ports/stm32/omv_spi.c <==
#include <stdbool.h>
#include <stddef.h>
#include <stdio.h>
#include <string.h>
#include STM32_HAL_H
#include "py/mphal.h"
#include "omv_boardconfig.h"
#include "irq.h"
#include "omv_common.h"
#include "dma_utils.h"
#include "omv_gpio.h"
#include "omv_spi.h"
#define DEFINE_SPI_INSTANCE(n)             \
    static SPI_HandleTypeDef SPIHandle##n; \
    void SPI##n##_IRQHandler(void) { HAL_SPI_IRQHandler(&SPIHandle##n); }
#define INITIALIZE_SPI_DESCR(spi, spi_number)                                               \
    do {                                                                                    \
        (spi)->id = spi_number;                                                             \
        (spi)->irqn = SPI##spi_number##_IRQn;                                               \
        (spi)->cs = OMV_SPI##spi_number##_SSEL_PIN;                                         \
        (spi)->descr = &SPIHandle##spi_number;                                              \
        (spi)->descr->Instance = SPI##spi_number;                                           \
        (spi)->dma_descr_tx = (DMA_HandleTypeDef)                                           \
        { OMV_SPI##spi_number##_DMA_TX_CHANNEL, { OMV_SPI##spi_number##_DMA_TX_REQUEST } }; \
        (spi)->dma_descr_rx = (DMA_HandleTypeDef)                                           \
        { OMV_SPI##spi_number##_DMA_RX_CHANNEL, { OMV_SPI##spi_number##_DMA_RX_REQUEST } }; \
    } while (0)

int omv_spi_transfer_start(omv_spi_t *spi, omv_spi_transfer_t *xfer) {
    // No TX transfers in circular or double buffer mode.
    if ((spi->dma_flags & (OMV_SPI_DMA_CIRCULAR | OMV_SPI_DMA_DOUBLE)) && xfer->txbuf) {
        return -1;
    }

    spi->callback = xfer->callback;
    spi->userdata = xfer->userdata;
    spi->xfer_error = 0;
    spi->xfer_flags = xfer->flags;

    spi->xfer_flags &= ~(OMV_SPI_XFER_FAILED | OMV_SPI_XFER_COMPLETE | OMV_SPI_XFER_HALF);

    if (spi->xfer_flags & OMV_SPI_XFER_BLOCKING) {
        if (xfer->txbuf && xfer->rxbuf) {
            if (HAL_SPI_TransmitReceive(spi->descr, xfer->txbuf,
                                        xfer->rxbuf, xfer->size, xfer->timeout) != HAL_OK) {
                return -1;
            }
        } else if (xfer->txbuf) {
            if (HAL_SPI_Transmit(spi->descr, xfer->txbuf, xfer->size, xfer->timeout) != HAL_OK) {
                return -1;
            }
        } else if (xfer->rxbuf) {
            if (HAL_SPI_Receive(spi->descr, xfer->rxbuf, xfer->size, xfer->timeout) != HAL_OK) {
                return -1;
            }
        }
    } else if (spi->xfer_flags & OMV_SPI_XFER_NONBLOCK) {
        if (xfer->txbuf && xfer->rxbuf) {
            if (HAL_SPI_TransmitReceive_IT(spi->descr, xfer->txbuf,
                                           xfer->rxbuf, xfer->size) != HAL_OK) {
                return -1;
            }
        } else if (xfer->txbuf) {
            if (HAL_SPI_Transmit_IT(spi->descr, xfer->txbuf, xfer->size) != HAL_OK) {
                return -1;
            }
        } else if (xfer->rxbuf) {
            if (HAL_SPI_Receive_IT(spi->descr, xfer->rxbuf, xfer->size) != HAL_OK) {
                return -1;
            }
        }
    } else if (spi->xfer_flags & OMV_SPI_XFER_DMA) {
        if (xfer->txbuf && xfer->rxbuf) {
            if (HAL_SPI_TransmitReceive_DMA(spi->descr, xfer->txbuf,
                                            xfer->rxbuf, xfer->size) != HAL_OK) {
                return -1;
            }
        } else if (xfer->txbuf) {
            if (HAL_SPI_Transmit_DMA(spi->descr, xfer->txbuf, xfer->size) != HAL_OK) {
                return -1;
            }
        } else if (xfer->rxbuf) {
            if (HAL_SPI_Receive_DMA(spi->descr, xfer->rxbuf, xfer->size) != HAL_OK) {
                return -1;
            }
        }
    } else {
        return -1;
    }
    return 0;
}

int omv_spi_transfer_abort(omv_spi_t *spi) {
    if (SCB->ICSR & SCB_ICSR_VECTACTIVE_Msk) {
        HAL_SPI_Abort_IT(spi->descr);
    } else {
        HAL_SPI_Abort(spi->descr);
    }
    return 0;
}

static int omv_spi_dma_init(omv_spi_t *spi, uint32_t direction, omv_spi_config_t *config) {
    DMA_HandleTypeDef *dma_descr;

    if (direction == DMA_MEMORY_TO_PERIPH) {
        dma_descr = &spi->dma_descr_tx;
    } else {
        dma_descr = &spi->dma_descr_rx;
    }

    // Configure the SPI DMA steam.
    dma_descr->Init.Mode = (config->dma_flags & OMV_SPI_DMA_CIRCULAR) ? DMA_CIRCULAR : DMA_NORMAL;
    dma_descr->Init.Priority = DMA_PRIORITY_HIGH;
    dma_descr->Init.Direction = direction;
    // When the DMA is configured in direct mode (the FIFO is disabled), the source and
    // destination transfer widths are equal, and both defined by PSIZE (MSIZE is ignored).
    // Additionally, burst transfers are not possible (MBURST and PBURST are both ignored).
    dma_descr->Init.FIFOMode = DMA_FIFOMODE_DISABLE;
    dma_descr->Init.FIFOThreshold = DMA_FIFO_THRESHOLD_1QUARTERFULL;
    // Note MBURST and PBURST are ignored.
    dma_descr->Init.MemBurst = DMA_MBURST_SINGLE;
    dma_descr->Init.PeriphBurst = DMA_PBURST_SINGLE;
    dma_descr->Init.MemDataAlignment = DMA_MDATAALIGN_WORD;
    #if defined(STM32H7)
    dma_descr->Init.PeriphDataAlignment = DMA_PDATAALIGN_WORD;
    #else
    dma_descr->Init.PeriphDataAlignment = (config->datasize == 8) ? DMA_PDATAALIGN_BYTE : DMA_PDATAALIGN_HALFWORD;
    #endif
    dma_descr->Init.MemInc = DMA_MINC_ENABLE;
    dma_descr->Init.PeriphInc = DMA_PINC_DISABLE;

    // Initialize the DMA stream
    HAL_DMA_DeInit(dma_descr);
    if (HAL_DMA_Init(dma_descr) != HAL_OK) {
        // Initialization Error
        return -1;
    }

    // Link the DMA handle to SPI handle.
    if (direction == DMA_MEMORY_TO_PERIPH) {
        __HAL_LINKDMA(spi->descr, hdmatx, spi->dma_descr_tx);
    } else {
        __HAL_LINKDMA(spi->descr, hdmarx, spi->dma_descr_rx);
    }
    // Set the SPI handle used by the DMA channel's IRQ handler.
    dma_utils_set_irq_descr(dma_descr->Instance, dma_descr);

    // Get DMA channel's IRQ number.
    uint8_t dma_irqn = dma_utils_channel_to_irqn(dma_descr->Instance);

    // Configure and enable DMA IRQ channel.
    NVIC_SetPriority(dma_irqn, IRQ_PRI_DMA);
    HAL_NVIC_EnableIRQ(dma_irqn);

    return 0;
}

int omv_spi_init(omv_spi_t *spi, omv_spi_config_t *config) {
    memset(spi, 0, sizeof(omv_spi_t));

    if (0) {
    #if defined(OMV_SPI1_ID)
    } else if (config->id == 1) {
        INITIALIZE_SPI_DESCR(spi, 1);
    #endif
    #if defined(OMV_SPI2_ID)
    } else if (config->id == 2) {
        INITIALIZE_SPI_DESCR(spi, 2);
    #endif
    #if defined(OMV_SPI3_ID)
    } else if (config->id == 3) {
        INITIALIZE_SPI_DESCR(spi, 3);
    #endif
    #if defined(OMV_SPI4_ID)
    } else if (config->id == 4) {
        INITIALIZE_SPI_DESCR(spi, 4);
    #endif
    #if defined(OMV_SPI5_ID)
    } else if (config->id == 5) {
        INITIALIZE_SPI_DESCR(spi, 5);
    #endif
    #if defined(OMV_SPI6_ID)
    } else if (config->id == 6) {
        INITIALIZE_SPI_DESCR(spi, 6);
    #endif
    } else {
        return -1;
    }

    if (omv_spi_bus_init(spi, config) != 0) {
        return -1;
    }

    if (config->dma_flags & (OMV_SPI_DMA_NORMAL | OMV_SPI_DMA_CIRCULAR)) {
        if (config->bus_mode & OMV_SPI_BUS_TX) {
            omv_spi_dma_init(spi, DMA_MEMORY_TO_PERIPH, config);
        }
        if (config->bus_mode & OMV_SPI_BUS_RX) {
            omv_spi_dma_init(spi, DMA_PERIPH_TO_MEMORY, config);
        }
    }
    // Configure and enable SPI IRQ channel.
    NVIC_SetPriority(spi->irqn, IRQ_PRI_SPI);
    HAL_NVIC_EnableIRQ(spi->irqn);

    // Install TX/RX callbacks even if DMA mode is not enabled for non-blocking transfers.
    HAL_SPI_RegisterCallback(spi->descr, HAL_SPI_TX_RX_COMPLETE_CB_ID, omv_spi_callback);
    HAL_SPI_RegisterCallback(spi->descr, HAL_SPI_TX_COMPLETE_CB_ID, omv_spi_callback);
    HAL_SPI_RegisterCallback(spi->descr, HAL_SPI_RX_COMPLETE_CB_ID, omv_spi_callback);
    if (config->dma_flags & OMV_SPI_DMA_DOUBLE) {
        HAL_SPI_RegisterCallback(spi->descr, HAL_SPI_TX_RX_HALF_COMPLETE_CB_ID, omv_spi_callback);
        HAL_SPI_RegisterCallback(spi->descr, HAL_SPI_TX_HALF_COMPLETE_CB_ID, omv_spi_callback);
        HAL_SPI_RegisterCallback(spi->descr, HAL_SPI_RX_HALF_COMPLETE_CB_ID, omv_spi_callback);
    }

    spi->initialized = true;
    spi->dma_flags = config->dma_flags;
    omv_spi_descr_all[config->id - 1] = spi;
    return 0;
}

int omv_spi_deinit(omv_spi_t *spi) {
    if (spi && spi->initialized) {
        spi->initialized = false;
        omv_spi_descr_all[spi->id - 1] = NULL;
        omv_spi_transfer_abort(spi);
        if (spi->dma_flags & (OMV_SPI_DMA_NORMAL | OMV_SPI_DMA_CIRCULAR)) {
            if (spi->descr->hdmatx != NULL) {
                HAL_DMA_Abort(spi->descr->hdmatx);
            }
            if (spi->descr->hdmarx != NULL) {
                HAL_DMA_Abort(spi->descr->hdmarx);
            }
        }
        HAL_SPI_DeInit(spi->descr);
        HAL_NVIC_DisableIRQ(spi->irqn);
        // Deinit the CS pin here versus in HAL_SPI_MspDeInit which is shared code.
        omv_gpio_deinit(spi->cs);
    }
    return 0;
}
